--- a/themes/PaperMod/layouts/partials/footer.html
+++ b/themes/PaperMod/layouts/partials/footer.html
@@ -7,8 +7,8 @@
     {{- end }}
     <span>
         Powered by
-        <a href="https://github.com/arvind2602" rel="noopener noreferrer" target="_blank">Arvind gupta</a> &
-        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+        <a href="https://github.com/arvind2602" rel="noopener noreferrer" target="_blank">Arvind gupta</a>
+        <!-- <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a> -->
     </span>
 </footer>
 {{- end }}
